@@ -61,6 +61,7 @@ CREATE TABLE IF NOT EXISTS `configuration` (
   `WIFI_KEY_TYPE` VARCHAR(10) NOT NULL DEFAULT 'NONE',
   `WIFI_PASSWORD` VARCHAR(63),
   `WIFI_IP` VARCHAR(15) NOT NULL DEFAULT '000.000.000.000',
+  `WIFI_IP_REAL` VARCHAR(15) NOT NULL DEFAULT '000.000.000.000',
   `WIFI_IP_MANUAL` BOOLEAN NOT NULL DEFAULT false,
   `RTC_OFFSET` int(11) NOT NULL DEFAULT '0',
   `REMOVE_1000_CHANGE_LIMIT` VARCHAR(5) NOT NULL DEFAULT 'False',
@@ -73,8 +74,8 @@ CREATE TABLE IF NOT EXISTS `configuration` (
 --
 
 
-INSERT INTO `configuration` (`id`, `VERSION`, `COLOR_HUMIDITY_GRAPH`, `COLOR_TEMPERATURE_GRAPH`, `COLOR_WATER_GRAPH`, `COLOR_LEVEL_GRAPH`, `COLOR_PH_GRAPH`, `COLOR_EC_GRAPH`, `COLOR_OD_GRAPH`, `COLOR_ORP_GRAPH`, `COLOR_POWER_GRAPH`, `RECORD_FREQUENCY`, `POWER_FREQUENCY`, `NB_PLUGS`, `UPDATE_PLUGS_FREQUENCY`, `ALARM_ACTIV`, `ALARM_VALUE`, `COST_PRICE`, `COST_PRICE_HP`, `COST_PRICE_HC`, `START_TIME_HC`, `STOP_TIME_HC`, `COST_TYPE`, `STATISTICS`,`ADVANCED_REGUL_OPTIONS`,`SHOW_COST`,`RESET_MINMAX`, `WIFI`, `WIFI_SSID`, `WIFI_KEY_TYPE`, `WIFI_PASSWORD`, `WIFI_IP`, `WIFI_IP_MANUAL`, `RTC_OFFSET`) VALUES
-(1, '1.1.28', 'blue', 'red', 'orange', 'pink', 'brown', 'yellow', 'red', 'blue', 'black', 5, 1, 3, 1, '0000', '15', 0.1225, 0.1353, 0.0926, '22:30', '06:30', 'standard', 'True', 'False', 0, '00:00',0,'','NONE','','000.000.000.000',0,0);
+INSERT INTO `configuration` (`id`, `VERSION`, `COLOR_HUMIDITY_GRAPH`, `COLOR_TEMPERATURE_GRAPH`, `COLOR_WATER_GRAPH`, `COLOR_LEVEL_GRAPH`, `COLOR_PH_GRAPH`, `COLOR_EC_GRAPH`, `COLOR_OD_GRAPH`, `COLOR_ORP_GRAPH`, `COLOR_POWER_GRAPH`, `RECORD_FREQUENCY`, `POWER_FREQUENCY`, `NB_PLUGS`, `UPDATE_PLUGS_FREQUENCY`, `ALARM_ACTIV`, `ALARM_VALUE`, `COST_PRICE`, `COST_PRICE_HP`, `COST_PRICE_HC`, `START_TIME_HC`, `STOP_TIME_HC`, `COST_TYPE`, `STATISTICS`,`ADVANCED_REGUL_OPTIONS`,`SHOW_COST`,`RESET_MINMAX`, `WIFI`, `WIFI_SSID`, `WIFI_KEY_TYPE`, `WIFI_PASSWORD`, `WIFI_IP`, `WIFI_IP_REAL`, `WIFI_IP_MANUAL`, `RTC_OFFSET`) VALUES
+(1, '1.1.28', 'blue', 'red', 'orange', 'pink', 'brown', 'yellow', 'red', 'blue', 'black', 5, 1, 3, 1, '0000', '15', 0.1225, 0.1353, 0.0926, '22:30', '06:30', 'standard', 'True', 'False', 0, '00:00',0,'','NONE','','000.000.000.000','000.000.000.000',0,0);
 
 -- --------------------------------------------------------
 
