@@ -1,0 +1,4 @@
+SET CHARACTER SET utf8;
+
+-- Version 2.0.07:
+ALTER TABLE `cultibox`.`configuration` ADD `WIFI_IP_REAL` VARCHAR(15) NOT NULL DEFAULT '000.000.000.000';
